# hpc

./: HpcMarkupMulti.hs  Main.hs  hpc-bin.cabal  run_benchmarks.sh
bench/: MTix.hs  MTixParMerge1.hs  MTixParMerge2.hs  MTixParProject2.hs  MTixParReadMerge1.hs  Main.hs
bench/MTix/Par/: Coverage1.hs  Coverage2.hs  Merge1.hs  Merge2.hs  Merge3.hs  Merge4.hs  Project1.hs  Project2.hs  Read.hs  Types.hs
bench/MTix/Seq/: List.hs  Map.hs  Seq.hs
bench/data/bst/: prop_DeleteDelete_from_test_Main_hs_150.954312.tix  prop_DeleteNil_from_test_Main_hs_134.281250.tix  prop_DeletePreservesEquiv_from_test_Main_hs_260.149536.tix  prop_DeleteUnion_from_test_Main_hs_156.477520.tix  prop_FindModel_from_test_Main_hs_304.501050.tix  prop_FindNil_from_test_Main_hs_198.207717.tix  prop_FindPostAbsent_from_test_Main_hs_70.799004.tix  prop_FindPreservesEquiv_from_test_Main_hs_268.617644.tix  prop_FindUnion_from_test_Main_hs_213.939750.tix  prop_InsertComplete_from_test_Main_hs_275.374080.tix  prop_InsertModel_from_test_Main_hs_292.373168.tix  prop_NilModel_from_test_Main_hs_289.591733.tix  prop_ShrinkEquivs_from_test_Main_hs_241.541939.tix  prop_SizeInsert_from_test_Main_hs_90.440524.tix  prop_UnionDeleteDelete_from_test_Main_hs_182.893258.tix  prop_UnionDeleteInsert_from_test_Main_hs_176.758498.tix  prop_UnionModel_from_test_Main_hs_300.170374.tix  (+19 more)
bench/old/: MTixParMerge2.hs  MTixParProject1.hs  MTixParProject3.hs  MTixParRead.hs
bench/report/: Makefile  main.blg  main.dvi  main.fls  main.tex  main.toc
bench/results/: mergeMTixs.1.csv  mergeMTixs.4.csv  mergeMTixs.8.csv
src/: HpcMarkupMulti.hs  MTix.hs
(+343 files in other folders)
