name: hpc-bin
version: 0.68.1
copyright: XXX
license: BSD3
author: XXX
maintainer: XXX
synopsis: XXX
description: XXX
category: Development
build-type: Simple
cabal-version: >= 1.10

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    HpcParser
    HpcCombine
    HpcDraft
    HpcFlags
    HpcLexer
    HpcMarkup
    HpcMarkupMulti
    HpcOverlay
    HpcReport
    HpcShowTix
    HpcUtils
    MTix
  build-depends: 
      base >= 4 && < 5
    , hpc
    , directory  
    , filepath   
    , containers 
    , array      

executable hpc
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: Main.hs
  other-modules: 
    Paths_hpc_bin
  ghc-options:
    -O2
    -threaded
    -rtsopts
  build-depends: 
      base >= 4 && < 5
    , hpc-bin      
    , directory
    , filepath
    , containers 
    , array

executable bench
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: bench
  other-modules: 
    MTix.Seq.List
    MTix.Seq.Map
    MTix.Seq.Seq
    MTix.Par.Types
    MTix.Par.Read
    MTix.Par.Merge1
    MTix.Par.Merge2
    MTix.Par.Merge3
    MTix.Par.Project1
    MTix.Par.Project2
    MTix.Par.Coverage1
    MTix.Par.Coverage2
  ghc-options:
    -O2
    -threaded
    -rtsopts
    -eventlog
    -feager-blackholing
  build-depends:
      base >= 4 && < 5
    , hpc-bin        
    , hpc
    , directory
    , filepath
    , containers 
    , array
    , criterion
    , deepseq
    , parallel
    , monad-par
    , monad-par-extras
